@@ -35,6 +35,7 @@
 /* #define PARANOIA_LEVEL 2 */
 #undef LWGEOM_PROFILE_MAKEVALID
 
+#if POSTGIS_GEOS_VERSION < 38
 /*
  * Return Nth vertex in GEOSGeometry as a POINT.
  * May return NULL if the geometry has NO vertex.
@@ -108,6 +109,7 @@ LWGEOM_GEOS_getPointN(const GEOSGeometry* g_in, uint32_t n)
 
 	return GEOSGeom_createPoint(seq_out);
 }
+#endif
 
 LWGEOM* lwcollection_make_geos_friendly(LWCOLLECTION* g);
 LWGEOM* lwline_make_geos_friendly(LWLINE* line);
@@ -313,6 +315,8 @@ lwcollection_make_geos_friendly(LWCOLLECTION* g)
 
 	return (LWGEOM*)ret;
 }
+
+#if POSTGIS_GEOS_VERSION < 38
 
 /*
  * Fully node given linework
@@ -843,6 +847,7 @@ LWGEOM_GEOS_makeValid(const GEOSGeometry* gin)
 
 	return gout;
 }
+#endif
 
 /* Exported. Uses GEOS internally */
 LWGEOM*
@@ -889,7 +894,11 @@ lwgeom_make_valid(LWGEOM* lwgeom_in)
 		lwgeom_out = lwgeom_in;
 	}
 
+#if POSTGIS_GEOS_VERSION < 38
 	geosout = LWGEOM_GEOS_makeValid(geosgeom);
+#else
+	geosout = GEOSMakeValid(geosgeom);
+#endif
 	GEOSGeom_destroy(geosgeom);
 	if (!geosout) return NULL;
 
